--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,5 +1,6 @@
 body{
     margin:0px;
+    box-sizing: border-box;
 }
 
 .topbar{
@@ -10,31 +11,43 @@ body{
     height:75px;
 }
 
-.menustrip{
-    position:fixed;
-    top:75px;
-    left:0px;
-    right:0px;
-    height:40px;
-    line-height: 40px;
-}
-
 .leftpanel{
     position:fixed;
     left:0px;
-    top:115px;
+    top:75px;
     bottom:0px;
-    width:300px;
+    width:500px;
+}
+
+#datacollections
+{
+    overflow-y: scroll;
+    position:fixed;
+    bottom:0px;
+    left:10px;
+    width:490px;
+    top:150px;
 }
 
 .contentpanel{
     position:fixed;
-    left:300px;
-    top:115px;
+    left:500px;
+    top:75px;
     bottom:0px;
     right:0px;
 }
 
 .treeitem{
-    margin-left:15px;
+    margin-top:5px;
+    cursor:pointer;
+}
+
+.treechildren{
+    padding-left:15px;
+}
+
+#notifications{
+    position:fixed;
+    right:10px;
+    top:10px;
 }
